using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class MeaningString 
{
    public static string level = "Level";
    public static string menu = "Menu";
    public static string option = "Option";
    public static string button = "button";
    public static string keyboard = "keyboard";
    public static string speed = "speed";
    public static string horizontal = "Horizontal";
    public static string coins = "Coins";
    public static string destroy = "Destroy";
    public static string hit = "Hit";
    public static string notHit = "NotHit";
    public static string state = "State";
    public static string isGrounder = "isGrounder";
    public static string vSpeed = "vSpeed";
    public static string difficulty = "Difficulty";
    public static string easy = "easy";
    public static string normal = "normal";
    public static string hard = "hard";
    public static string ground = "Ground";
    public static string sampleScene = "SampleScene";
    public static string saveScore = "SaveScore";
}
